--- a/src/Header.css
+++ b/src/Header.css
@@ -50,7 +50,7 @@
 }
 
 .header__option:hover>.MuiSvgIcon-root {
-  color: #0940d8;
+  color: #2e81f4;
 }
 
 .header__option--active>.MuiSvgIcon-root {
